# aws-demo

./: .gitignore  Cargo.toml  cargo-lambda-build.sh  cargo-lambda-deploy.sh
demo-lambda-axum/: Cargo.toml  CargoLambda.toml  README.md
demo-lambda-axum-common/: Cargo.toml
demo-lambda-axum-common/src/: tracing.rs
demo-lambda-axum-tasks/: Cargo.toml  CargoLambda.toml
demo-lambda-axum-tasks/src/: main.rs
demo-lambda-axum/config/: default.toml
demo-lambda-axum/src/: api.rs  config.rs  db.rs  error.rs  extract.rs  health.rs  htm.rs  main.rs  serde_decorators.rs  session.rs  templates.rs  tracing.rs
demo-lambda-axum/src/db/: db_entries.rs  entries.rs  mod.rs  users.rs
demo-lambda-axum/src/htm/: journal.rs  login.rs  mod.rs
demo-lambda-axum/templates/: _layout.html  index.html  login.html
demo-lambda-axum/templates/journal/: journal_entries.html
demo-lambda-tasks/: Cargo.toml  CargoLambda.toml
demo-lambda-tasks/config/: default.toml
demo-lambda-tasks/migrations/: V1__initial.sql
demo-lambda-tasks/src/: main.rs
util/: Cargo.toml
util/src/: config.rs
