[package]
name = "demo-lambda-axum-tasks"
version = "0.1.0"
edition = "2024"
authors = ["Ernesto Menéndez <pyalec@gmail.com>"]

[dependencies]
demo-lambda-axum-common = { path = "../demo-lambda-axum-common" }
lambda_runtime = "0.13"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
