[package]
name = "demo-lambda-axum"
version = "0.1.0"
edition = "2024"
authors = ["Ernesto Menéndez <pyalec@gmail.com>"]

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["query"] }
askama = "0.14"
lambda_http = "0.14.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
lazy_static = "1.5"
uuid = { version = "1.16", features = ["v4"] }
validator = {  version = "0.20", features = ["derive"] }
strum = {  version = "0.27", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
