[package]
name = "demo-lambda-tasks"
version = "0.1.0"
edition = "2024"
authors = ["Ernesto Menéndez <pyalec@gmail.com>"]

[dependencies]
util = { path = "../util" }
lambda_runtime = "0.13"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tokio-postgres = "0.7"
postgres-native-tls = "0.5"
native-tls = { version = "0.2", features = ["vendored"] }
refinery = { version = "0.8", features = ["tokio-postgres"]}
